# apartment_availability_checker

./: README.md
code/: .gitignore  Dockerfile  README.md  pyproject.toml
code/src/apartment_check/: lambda_function.py  util.py
code/src/apartment_check/properties/: __init__.py  elle_west.py
code/test/: test_apartment_check.py
infra/: package.json
infra/lib/: infra-stack.ts
